fix section mobile

--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -68,9 +68,9 @@
 }
 
 @media (max-width: 768px) {
-  .section {
+  /* .section {
     padding: 5rem 1.5rem 3rem;
-  }
+  } */
   
   .section h1 {
     font-size: 2.2rem;
